--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -17,7 +17,10 @@ jobs:
       - name: ⚙️ Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 24
+
+      - name: 📋 Check Node.js version
+        run: node -v
 
       - name: 📦 Install dependencies
         run: |
