--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.7.7"
   },
   "scripts": {
     "start": "react-scripts start",
