Add Coveralls GitHub Action

--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -52,3 +52,6 @@ jobs:
       - name: 🏗️ Build the app
         run: |
           npm run build
+
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2.3.6
